--- a/old-index.html
+++ b/old-index.html
@@ -14,23 +14,17 @@
                 <div class="nav-item"><a href="index.html">Rules</a></div>
                 <div class="nav-item"><a href="index.html">Rewards</a></div>
                 <div class="nav-item"><a href="voting.html">Votings</a></div>
-                <div class="nav-item"><a href="https://memeotica.gitbook.io/memoticfun/" target="_blank" rel="noopener noreferrer">Whitepaper</a></div>
+                <div class="nav-item"><a href="index.html">Whitepaper</a></div>
                 <div class="nav-item"><a href="index.html">Roadmap</a></div>
                 <div class="nav-item"><a href="index.html">Leaderboard</a></div>
                 <div class="nav-icon">
-                    <a href="https://dexscreener.com" target="_blank" rel="noopener noreferrer">
-                        <img src="public/images/DS.png" alt="DexScreener" class="icon-img">
-                    </a>
+                    <img src="public/images/DS.png" alt="DS" class="icon-img">
                 </div>
                 <div class="nav-icon">
-                    <a href="https://x.com/Memeotica_Game" target="_blank" rel="noopener noreferrer">
-                        <img src="public/images/fi-11823292.svg" alt="Telegram" class="icon-img">
-                    </a>
+                    <img src="img/twitter-x.svg" alt="Twitter X" class="icon-img">
                 </div>
                 <div class="nav-icon">
-                    <a href="https://t.me/memeotica_game" target="_blank" rel="noopener noreferrer">
-                        <img src="img/twitter-x.svg" alt="Twitter X" class="icon-img">
-                    </a>
+                    <img src="public/images/fi-11823292.svg" alt="Telegram" class="icon-img">
                 </div>
             </div>
         </nav>
