--- a/vote.html
+++ b/vote.html
@@ -28,12 +28,7 @@
                     <span class=" w-px block bg-white/30"></span>   
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="index.html">
-                        Home
-                    </a>
-                </li>
-                <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="#">
+                    <a class="px-1 w-full" href="rules.html">
                         Rules
                     </a>
                 </li>
@@ -48,12 +43,12 @@
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="https://memeotica.gitbook.io/memoticfun/" target="_blank" rel="noopener noreferrer">
+                    <a class="px-1 w-full" href="#">
                         Whitepaper
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="https://memeotica.gitbook.io/memoticfun/roadmap" target="_blank" rel="noopener noreferrer">
+                    <a class="px-1 w-full" href="#">
                         Roadmap
                     </a>
                 </li>
@@ -63,18 +58,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://dexscreener.com" target="_blank" rel="noopener noreferrer">
-                        <img src="public/images/DS.png" alt="DexScreener" class="w-5 h-5">
+                    <a target="_blank" href="https://t.me/memeotica_game">
+                        <img src="public/images/header/x.svg" alt="Twitter X" class="w-5 h-5">
                     </a>
                 </li>
                 <li>
-                    <a href="https://x.com/Memeotica_Game" target="_blank" rel="noopener noreferrer">
-                        <img src="public/images/fi-11823292.svg" alt="Telegram" class="w-5 h-5">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://t.me/memeotica_game" target="_blank" rel="noopener noreferrer">
-                        <img src="img/twitter-x.svg" alt="Twitter X" class="w-5 h-5">
+                    <a target="_blank" href="https://x.com/Memeotica_Game">
+                        <img src="public/images/header/tg.svg" alt="Telegram" class="w-5 h-5">
                     </a>
                 </li>
             </ul>
@@ -91,12 +81,7 @@
             </button>
             <ul class="divide-y divide-white/10">
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="index.html">
-                        Home
-                    </a>
-                </li>
-                <li class="">
-                    <a class="px-1 py-4 block w-full" href="#">
+                    <a class="px-1 py-4 block w-full" href="rules.html">
                         Rules
                     </a>
                 </li>
@@ -111,12 +96,12 @@
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="https://memeotica.gitbook.io/memoticfun/" target="_blank" rel="noopener noreferrer">
+                    <a class="px-1 py-4 block w-full" href="#">
                         Whitepaper
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="https://memeotica.gitbook.io/memoticfun/roadmap" target="_blank" rel="noopener noreferrer">
+                    <a class="px-1 py-4 block w-full" href="#">
                         Roadmap
                     </a>
                 </li>
@@ -145,7 +130,7 @@
                 <div class=" relative">
                     <div class=" bg-[#FF3030] top-1/2 -translate-y-1/2  left-0 absolute blur-[10rem] w-72 h-72"></div> 
                     <div class=" relative z-10">
-                        <img src="public/images/image-6.png" alt="Left Penguin" class="max-md:max-w-[150%] left-image max-md:-translate-x-24">
+                        <img src="public/images/vote/ping.png" alt="Left Penguin" class="max-md:max-w-[150%] left-image max-md:-translate-x-24">
                         <p class=" left-name max-md:hidden mt-2">LEFT_NAME</p>
                     </div>
                 </div>
@@ -166,7 +151,7 @@
                 <div class=" relative">
                     <div class=" bg-[#61E652] top-1/2 -translate-y-1/2  right-0 absolute blur-[10rem] w-72 h-72"></div> 
                     <div class=" relative z-10">
-                        <img src="public/images/image-2.png" alt="Right Penguin" class="max-md:max-w-[150%] right-image">
+                        <img src="public/images/vote/trump.png" alt="Right Penguin" class="max-md:max-w-[150%] right-image">
                         <p class=" right-name max-md:hidden mt-2">RIGHT_NAME</p>
                     </div>
                 </div>
@@ -198,23 +183,34 @@
             <h2 class=" mt-24 text-4xl relative z-10  font-light text-center mb-8">Collect this NFT cards during event</h2>
             <div class="space-y-12 max-md:flex flex-wrap justify-center gap-6">
                 <div class="flex gap-6 max-md:contents justify-center">
-                    <img src="public/images/NFT4.png" alt="PICKLE JD VANCE" class="nft-card">
-                    <img src="public/images/NFT3.png" alt="MEXICAN TRUMP" class="nft-card">
-                    <img src="public/images/NFT1.png" alt="XIPOOH" class="nft-card">
-                    <img src="public/images/NFT2.png" alt="J.D.VANCE" class="nft-card">
-                    <img src="public/images/NFT5.png" alt="SPACE MUSK" class="nft-card">
+                    <img src="public/images/vote/NFT4.png" alt="PICKLE JD VANCE" class="nft-card">
+                    <img src="public/images/vote/NFT3.png" alt="MEXICAN TRUMP" class="nft-card">
+                    <img src="public/images/vote/NFT1.png" alt="XIPOOH" class="nft-card">
+                    <img src="public/images/vote/NFT2.png" alt="J.D.VANCE" class="nft-card">
+                    <img src="public/images/vote/NFT5.png" alt="SPACE MUSK" class="nft-card">
                 </div>
                 <div class="flex gap-6 max-md:contents justify-center">
-                    <img src="public/images/NFT5.png" alt="SPACE MUSK" class="nft-card">
-                    <img src="public/images/NFT3.png" alt="MEXICAN TRUMP" class="nft-card">
-                    <img src="public/images/NFT4.png" alt="PICKLE JD VANCE" class="nft-card">
-                    <img src="public/images/NFT1.png" alt="XIPOOH" class="nft-card">
-                    <img src="public/images/NFT2.png" alt="J.D.VANCE" class="nft-card max-md:hidden">
+                    <img src="public/images/vote/NFT5.png" alt="SPACE MUSK" class="nft-card">
+                    <img src="public/images/vote/NFT3.png" alt="MEXICAN TRUMP" class="nft-card">
+                    <img src="public/images/vote/NFT4.png" alt="PICKLE JD VANCE" class="nft-card">
+                    <img src="public/images/vote/NFT1.png" alt="XIPOOH" class="nft-card">
+                    <img src="public/images/vote/NFT2.png" alt="J.D.VANCE" class="nft-card max-md:hidden">
                 </div>
             </div>
             <div class="bg-vote fixed opacity-80  bottom-0 h-[60%] pointer-events-none w-full"></div>
         </div>
     </section>
+
+    <footer>
+        <div class=" relative z-10 flex content text-right max-md:text-lg justify-between md:justify-center text-white/50 gap-10 items-center border-t border-white/20 mt-14 py-4 ">
+            <p class=" max-md:hidden">Memeotica. 2025</p>
+            <img src="public/images/memoitica.svg" class="  w-24 h-24 ">
+            <div class=" ">
+                <p class="max-md:mb-2 md:hidden">Memeotica. 2025</p>
+                <p class=" ">© All rights reserved</p>
+            </div>
+        </div>
+    </footer>
 
     <script type="module" src="js/index.js"></script>
     <script type="module" src="js/page/vote.js"></script>
