--- a/winner.html
+++ b/winner.html
@@ -29,12 +29,7 @@
                     <span class=" w-px block bg-white/30"></span>   
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="index.html">
-                        Home
-                    </a>
-                </li>
-                <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="#">
+                    <a class="px-1 w-full" href="rules.html">
                         Rules
                     </a>
                 </li>
@@ -49,12 +44,12 @@
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="https://memeotica.gitbook.io/memoticfun/" target="_blank" rel="noopener noreferrer">
+                    <a class="px-1 w-full" href="#">
                         Whitepaper
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="https://memeotica.gitbook.io/memoticfun/roadmap" target="_blank" rel="noopener noreferrer">
+                    <a class="px-1 w-full" href="roadmap.html">
                         Roadmap
                     </a>
                 </li>
@@ -64,18 +59,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://dexscreener.com" target="_blank" rel="noopener noreferrer">
-                        <img src="public/images/DS.png" alt="DexScreener" class="w-5 h-5">
+                    <a target="_blank" href="https://t.me/memeotica_game">
+                        <img src="public/images/header/x.svg" alt="Twitter X" class="w-5 h-5">
                     </a>
                 </li>
                 <li>
-                    <a href="https://x.com/Memeotica_Game" target="_blank" rel="noopener noreferrer">
-                        <img src="public/images/fi-11823292.svg" alt="Telegram" class="w-5 h-5">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://t.me/memeotica_game" target="_blank" rel="noopener noreferrer">
-                        <img src="img/twitter-x.svg" alt="Twitter X" class="w-5 h-5">
+                    <a target="_blank" href="https://x.com/Memeotica_Game">
+                        <img src="public/images/header/tg.svg" alt="Telegram" class="w-5 h-5">
                     </a>
                 </li>
             </ul>
@@ -92,12 +82,7 @@
             </button>
             <ul class="divide-y divide-white/10">
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="index.html">
-                        Home
-                    </a>
-                </li>
-                <li class="">
-                    <a class="px-1 py-4 block w-full" href="#">
+                    <a class="px-1 py-4 block w-full" href="rules.html">
                         Rules
                     </a>
                 </li>
@@ -112,12 +97,12 @@
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="https://memeotica.gitbook.io/memoticfun/" target="_blank" rel="noopener noreferrer">
+                    <a class="px-1 py-4 block w-full" href="#">
                         Whitepaper
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="https://memeotica.gitbook.io/memoticfun/roadmap" target="_blank" rel="noopener noreferrer">
+                    <a class="px-1 py-4 block w-full" href="roadmap.html">
                         Roadmap
                     </a>
                 </li>
@@ -149,6 +134,17 @@
             <p class="mt-1">Before the next vote</p>
         </div>
     </main>
+
+    <footer>
+        <div class=" flex content text-right max-md:text-lg justify-between md:justify-center text-white/50 gap-10 items-center border-t border-white/20 mt-14 py-4 ">
+            <p class=" max-md:hidden">Memeotica. 2025</p>
+            <img src="public/images/memoitica.svg" class="  w-24 h-24 ">
+            <div class=" ">
+                <p class="max-md:mb-2 md:hidden">Memeotica. 2025</p>
+                <p class=" ">© All rights reserved</p>
+            </div>
+        </div>
+    </footer>
 
     <script type="module" src="js/index.js"></script>
     <script type="module" src="js/page/winner.js"></script>
