Обновлены HTML, CSS и JS файлы

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://t.me/memeotica_game">
+                    <a target="_blank" href="https://x.com/Memeotica_Game">
                         <img src="public/images/header/x.svg" alt="Twitter X" class="w-5 h-5">
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://x.com/Memeotica_Game">
+                    <a target="_blank" href="https://t.me/memeotica_game">
                         <img src="public/images/header/tg.svg" alt="Telegram" class="w-5 h-5">
                     </a>
                 </li>
@@ -115,9 +115,9 @@
             <img src="public/images/memoitica.svg" class=" w-72 h-64 object-cover mx-auto">
             <h1 class=" text-5xl md:text-[4.5rem] leading-none text-center font-light">Where Politics<br> Becomes the Game.</h1>
             <h2 class=" max-md:text-xl max-w-[28rem] text-center mt-4 mx-auto">A Web3 strategy game where you compete in a civic arena by making predictions on political outcomes.</h2>
-            <button class=" max-md:text-xl font-semibold text-sm py-2.5 px-5 bg-[#6938EF] rounded-lg mx-auto block mt-6">
+            <a href="vote.html" class=" max-md:text-xl font-semibold text-sm py-2.5 px-5 bg-[#6938EF] rounded-lg mx-auto w-fit block mt-6">
                 Enter the Arena
-            </button>
+            </a>
         </div>
     </section>
     <section class=" ">
@@ -130,9 +130,9 @@
                 <div class=" relative z-10">
                     <p class=" mt-4 text-2xl md:text-xl">Predict Real-World Politics</p>
                     <p class=" max-md:text-xl mt-3">Forecast elections, laws, and events. Stake $MEMO or card power to play.</p>
-                    <button class=" font-semibold text-sm py-2.5 px-5 bg-white text-[#6938EF] rounded-lg mx-auto block mt-6">
+                    <a href="vote.html" class=" w-fit font-semibold text-sm py-2.5 px-5 bg-white text-[#6938EF] rounded-lg mx-auto block mt-6">
                         Start Voting
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="p-6 pt-4  bg-[#0602131A] rounded-[4rem] shadow-card">
@@ -143,9 +143,9 @@
                 <div class=" relative z-10">
                     <p class=" mt-4 text-2xl md:text-xl">Earn Dynamic NFT Cards</p>
                     <p class=" max-md:text-xl mt-3">Win evolving NFT cards tied to real-world outcomes. Trade or level them up.</p>
-                    <button class=" font-semibold text-sm py-2.5 px-5 bg-white text-[#6938EF] rounded-lg mx-auto block mt-6">
+                    <a href="coming.html" class=" w-fit font-semibold text-sm py-2.5 px-5 bg-white text-[#6938EF] rounded-lg mx-auto block mt-6">
                         Card Library
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="p-6 pt-4  bg-[#0602131A] rounded-[4rem] shadow-card">
@@ -156,9 +156,9 @@
                 <div class=" relative z-10">
                     <p class=" mt-4 text-2xl md:text-xl">Compete in the Arena</p>
                     <p class=" max-md:text-xl mt-3">Battle with your deck, join factions, and climb the leaderboard.</p>
-                    <button class=" font-semibold text-sm py-2.5 px-5 bg-white text-[#6938EF] rounded-lg mx-auto block mt-6">
+                    <a href="vote.html" class=" w-fit font-semibold text-sm py-2.5 px-5 bg-white text-[#6938EF] rounded-lg mx-auto block mt-6">
                         Enter the Arena
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
