--- a/vote.html
+++ b/vote.html
@@ -48,7 +48,7 @@
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="#">
+                    <a class="px-1 w-full" href="roadmap.html">
                         Roadmap
                     </a>
                 </li>
@@ -58,12 +58,12 @@
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://t.me/memeotica_game">
+                    <a target="_blank" href="https://x.com/Memeotica_Game">
                         <img src="public/images/header/x.svg" alt="Twitter X" class="w-5 h-5">
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://x.com/Memeotica_Game">
+                    <a target="_blank" href="https://t.me/memeotica_game">
                         <img src="public/images/header/tg.svg" alt="Telegram" class="w-5 h-5">
                     </a>
                 </li>
@@ -101,7 +101,7 @@
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="#">
+                    <a class="px-1 py-4 block w-full" href="roadmap.html">
                         Roadmap
                     </a>
                 </li>
@@ -119,11 +119,11 @@
             <div class="max-md:order-2 flex gap-5 items-center font-semibold mt-5 md:justify-center">
                 <div class=" max-md:w-full max-md:flex flex-col items-end">
                     <p class="w-2/3 left-name text-center mb-2 md:hidden mt-2">LEFT_NAME</p>
-                    <button id="no" class=" bg-[#F04438] py-2.5 px-14  max-md:w-2/3 rounded-lg">NO</button>
+                    <button id="no" class=" bg-[#F04438] py-2.5 px-14 disabled:opacity-40 relative max-md:w-2/3 rounded-lg">NO</button>
                 </div>
                 <div class=" max-md:w-full">
                     <p class="w-2/3 right-name text-center mb-2 md:hidden mt-2">RIGHT_NAME</p>
-                    <button id="yes" class="bg-[#039855] py-2.5 px-14  max-md:w-2/3 rounded-lg">YES</button>
+                    <button id="yes" class="bg-[#039855] py-2.5 px-14 disabled:opacity-40 relative max-md:w-2/3 rounded-lg">YES</button>
                 </div>
             </div>
             <div class="max-md:order-1 text-center text-lg font-bold flex justify-center items-center">
