--- a/rules.html
+++ b/rules.html
@@ -55,12 +55,12 @@
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://t.me/memeotica_game">
+                    <a target="_blank" href="https://x.com/Memeotica_Game">
                         <img src="public/images/header/x.svg" alt="Twitter X" class="w-5 h-5">
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://x.com/Memeotica_Game">
+                    <a target="_blank" href="https://t.me/memeotica_game">
                         <img src="public/images/header/tg.svg" alt="Telegram" class="w-5 h-5">
                     </a>
                 </li>
@@ -174,28 +174,48 @@
         <div class="ac-container max-md:p-5 md:max-w-[50%] space-y-2 mx-auto mt-20">
             <div>
                 <input id="ac-1" name="accordion-1" type="radio" />
-                <label for="ac-1">How can I get a legendary cards?</label>
+                <label for="ac-1">
+                    How can I get a legendary cards?
+                    <svg class="w-6 h-6" width="100%" height="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M18 9L12 15L6 9" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </label>
                 <article>
                     <p>No, it's not a rug pull! Think of it more like a magic carpet: at first glance, it might seem like just another piece of fabric, but really, it's ready to whisk you away to a world of financial wonders. Sure, there might be some castles in the air, but who can trust those? So sit back, relax, and enjoy the magic of the crypto world, where everyone gets to feel like a bit of a wizard—just without the disappearing tricks</p>
                 </article>
             </div>
             <div>
                 <input id="ac-2" name="accordion-1" type="radio" />
-                <label for="ac-2">Услуги</label>
+                <label for="ac-2">
+                    Услуги
+                    <svg class="w-6 h-6" width="100%" height="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M18 9L12 15L6 9" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </label>
                 <article>
                     <p>Какой нибудь замечательный текст...</p>
                 </article>
             </div>
             <div>
                 <input id="ac-3" name="accordion-1" type="radio" />
-                <label for="ac-3">Портфолио</label>
+                <label for="ac-3">
+                    Портфолио
+                    <svg class="w-6 h-6" width="100%" height="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M18 9L12 15L6 9" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </label>
                 <article>
                     <p>Какой нибудь замечательный текст...</p>
                 </article>
             </div>
             <div>
                 <input id="ac-4" name="accordion-1" type="radio" />
-                <label for="ac-4">Контакты</label>
+                <label for="ac-4">
+                    Контакты
+                    <svg class="w-6 h-6" width="100%" height="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M18 9L12 15L6 9" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </label>
                 <article>
                     <p>Какой нибудь замечательный текст...</p>
                 </article>
