--- a/winner.html
+++ b/winner.html
@@ -59,12 +59,12 @@
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://t.me/memeotica_game">
+                    <a target="_blank" href="https://x.com/Memeotica_Game">
                         <img src="public/images/header/x.svg" alt="Twitter X" class="w-5 h-5">
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://x.com/Memeotica_Game">
+                    <a target="_blank" href="https://t.me/memeotica_game">
                         <img src="public/images/header/tg.svg" alt="Telegram" class="w-5 h-5">
                     </a>
                 </li>
@@ -128,6 +128,7 @@
                 </svg>
                 Coin launched
             </div>
+            <a href="#" id="contract" class=" block mt-1">Contract address</a>
         </div>
         <div class="flex flex-col items-center mt-12">
             <p class="text-3xl font-medium" id="countdown">00:00:00</p>
