Обновлен файл rules.html

--- a/rules.html
+++ b/rules.html
@@ -193,31 +193,31 @@
                     </svg>
                 </label>
                 <article>
-                    <p>Какой нибудь замечательный текст...</p>
+                    <p>Are devs from USA?</p>
                 </article>
             </div>
             <div>
                 <input id="ac-3" name="accordion-1" type="radio" />
                 <label for="ac-3">
-                    Портфолио
+                    Yes, devs are from USA
                     <svg class="w-6 h-6" width="100%" height="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M18 9L12 15L6 9" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </label>
                 <article>
-                    <p>Какой нибудь замечательный текст...</p>
+                    <p>How to become rich with a memcoins?</p>
                 </article>
             </div>
             <div>
                 <input id="ac-4" name="accordion-1" type="radio" />
                 <label for="ac-4">
-                    Контакты
+                    Belive, belive and HODL!
                     <svg class="w-6 h-6" width="100%" height="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M18 9L12 15L6 9" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </label>
                 <article>
-                    <p>Какой нибудь замечательный текст...</p>
+                    <p>RandomText</p>
                 </article>
             </div>
         </div>
