--- a/rules.html
+++ b/rules.html
@@ -187,7 +187,7 @@
             <div>
                 <input id="ac-2" name="accordion-1" type="radio" />
                 <label for="ac-2">
-                    Услуги
+                    Are devs from USA?
                     <svg class="w-6 h-6" width="100%" height="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M18 9L12 15L6 9" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
@@ -199,7 +199,7 @@
             <div>
                 <input id="ac-3" name="accordion-1" type="radio" />
                 <label for="ac-3">
-                    Yes, devs are from USA
+                    Are devs from USA? - Yes, form USA
                     <svg class="w-6 h-6" width="100%" height="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M18 9L12 15L6 9" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
@@ -217,7 +217,7 @@
                     </svg>
                 </label>
                 <article>
-                    <p>RandomText</p>
+                    <p>How to become rich with a memcoins?</p>
                 </article>
             </div>
         </div>
