--- a/vote.html
+++ b/vote.html
@@ -28,12 +28,17 @@
                     <span class=" w-px block bg-white/30"></span>   
                 </li>
                 <li data-mobile-disable class="">
+                    <a class="px-1 w-full" href="index.html">
+                        Home
+                    </a>
+                </li>
+                <li data-mobile-disable class="">
                     <a class="px-1 w-full" href="rules.html">
                         Rules
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="#">
+                    <a class="px-1 w-full" href="coming.html">
                         Rewards
                     </a>
                 </li>
@@ -43,7 +48,7 @@
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="#">
+                    <a target="_blank" class="px-1 w-full" href="https://memeotica.gitbook.io/memoticfun">
                         Whitepaper
                     </a>
                 </li>
@@ -81,12 +86,17 @@
             </button>
             <ul class="divide-y divide-white/10">
                 <li class="">
+                    <a class="px-1 py-4 block w-full" href="index.html">
+                        Home
+                    </a>
+                </li>
+                <li class="">
                     <a class="px-1 py-4 block w-full" href="rules.html">
                         Rules
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="#">
+                    <a class="px-1 py-4 block w-full" href="coming.html">
                         Rewards
                     </a>
                 </li>
@@ -96,7 +106,7 @@
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="#">
+                    <a target="_blank" class="px-1 py-4 block w-full" href="https://memeotica.gitbook.io/memoticfun">
                         Whitepaper
                     </a>
                 </li>
