--- a/roadmap.html
+++ b/roadmap.html
@@ -24,12 +24,17 @@
                     <span class=" w-px block bg-white/30"></span>   
                 </li>
                 <li data-mobile-disable class="">
+                    <a class="px-1 w-full" href="index.html">
+                        Home
+                    </a>
+                </li>
+                <li data-mobile-disable class="">
                     <a class="px-1 w-full" href="rules.html">
                         Rules
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="#">
+                    <a class="px-1 w-full" href="coming.html">
                         Rewards
                     </a>
                 </li>
@@ -39,7 +44,7 @@
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="#">
+                    <a target="_blank" class="px-1 w-full" href="https://memeotica.gitbook.io/memoticfun">
                         Whitepaper
                     </a>
                 </li>
@@ -77,12 +82,17 @@
             </button>
             <ul class="divide-y divide-white/10">
                 <li class="">
+                    <a class="px-1 py-4 block w-full" href="index.html">
+                        Home
+                    </a>
+                </li>
+                <li class="">
                     <a class="px-1 py-4 block w-full" href="rules.html">
                         Rules
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="#">
+                    <a class="px-1 py-4 block w-full" href="coming.html">
                         Rewards
                     </a>
                 </li>
@@ -92,7 +102,7 @@
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="#">
+                    <a target="_blank" class="px-1 py-4 block w-full" href="https://memeotica.gitbook.io/memoticfun">
                         Whitepaper
                     </a>
                 </li>
