--- a/rules.html
+++ b/rules.html
@@ -25,12 +25,17 @@
                     <span class=" w-px block bg-white/30"></span>   
                 </li>
                 <li data-mobile-disable class="">
+                    <a class="px-1 w-full" href="index.html">
+                        Home
+                    </a>
+                </li>
+                <li data-mobile-disable class="">
                     <a class="px-1 w-full" href="rules.html">
                         Rules
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="#">
+                    <a class="px-1 w-full" href="coming.html">
                         Rewards
                     </a>
                 </li>
@@ -40,7 +45,7 @@
                     </a>
                 </li>
                 <li data-mobile-disable class="">
-                    <a class="px-1 w-full" href="#">
+                    <a target="_blank" class="px-1 w-full" href="https://memeotica.gitbook.io/memoticfun">
                         Whitepaper
                     </a>
                 </li>
@@ -78,12 +83,17 @@
             </button>
             <ul class="divide-y divide-white/10">
                 <li class="">
+                    <a class="px-1 py-4 block w-full" href="index.html">
+                        Home
+                    </a>
+                </li>
+                <li class="">
                     <a class="px-1 py-4 block w-full" href="rules.html">
                         Rules
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="#">
+                    <a class="px-1 py-4 block w-full" href="coming.html">
                         Rewards
                     </a>
                 </li>
@@ -93,7 +103,7 @@
                     </a>
                 </li>
                 <li class="">
-                    <a class="px-1 py-4 block w-full" href="#">
+                    <a target="_blank" class="px-1 py-4 block w-full" href="https://memeotica.gitbook.io/memoticfun">
                         Whitepaper
                     </a>
                 </li>
@@ -187,37 +197,37 @@
             <div>
                 <input id="ac-2" name="accordion-1" type="radio" />
                 <label for="ac-2">
+                    Is it RUG?
+                    <svg class="w-6 h-6" width="100%" height="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M18 9L12 15L6 9" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </label>
+                <article>
+                    <p>No, it's not a rug pull! Think of it more like a magic carpet: at first glance, it might seem like just another piece of fabric, but really, it's ready to whisk you away to a world of financial wonders. Sure, there might be some castles in the air, but who can trust those? So sit back, relax, and enjoy the magic of the crypto world, where everyone gets to feel like a bit of a wizard—just without the disappearing tricks</p>
+                </article>
+            </div>
+            <div>
+                <input id="ac-3" name="accordion-1" type="radio" />
+                <label for="ac-3">
                     Are devs from USA?
                     <svg class="w-6 h-6" width="100%" height="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M18 9L12 15L6 9" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </label>
                 <article>
-                    <p>Are devs from USA?</p>
-                </article>
-            </div>
-            <div>
-                <input id="ac-3" name="accordion-1" type="radio" />
-                <label for="ac-3">
-                    Are devs from USA? - Yes, form USA
-                    <svg class="w-6 h-6" width="100%" height="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M18 9L12 15L6 9" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                </label>
-                <article>
-                    <p>How to become rich with a memcoins?</p>
+                    <p>No, it's not a rug pull! Think of it more like a magic carpet: at first glance, it might seem like just another piece of fabric, but really, it's ready to whisk you away to a world of financial wonders. Sure, there might be some castles in the air, but who can trust those? So sit back, relax, and enjoy the magic of the crypto world, where everyone gets to feel like a bit of a wizard—just without the disappearing tricks</p>
                 </article>
             </div>
             <div>
                 <input id="ac-4" name="accordion-1" type="radio" />
                 <label for="ac-4">
-                    Belive, belive and HODL!
+                    How to become rich with a memcoins?
                     <svg class="w-6 h-6" width="100%" height="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M18 9L12 15L6 9" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </label>
                 <article>
-                    <p>How to become rich with a memcoins?</p>
+                    <p>No, it's not a rug pull! Think of it more like a magic carpet: at first glance, it might seem like just another piece of fabric, but really, it's ready to whisk you away to a world of financial wonders. Sure, there might be some castles in the air, but who can trust those? So sit back, relax, and enjoy the magic of the crypto world, where everyone gets to feel like a bit of a wizard—just without the disappearing tricks</p>
                 </article>
             </div>
         </div>
