--- a/rules.html
+++ b/rules.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Макет Frame 6</title>
+    <title>Rules</title>
+    <link rel="icon" type="image/png" href="public/favicon/favicon.png">
+    <link rel="apple-touch-icon" href="public/favicon/favicon.png">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/rules.css">
