--- a/winner.html
+++ b/winner.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Голосования - Memeotica</title>
+    <title>Voting</title>
+    <link rel="icon" type="image/png" href="public/favicon/favicon.png">
+    <link rel="apple-touch-icon" href="public/favicon/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Подключение Supabase -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script> -->
