Добавил фавикон и обновил заголовки страниц

--- a/admin.html
+++ b/admin.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Админ-панель - Memeotica</title>
-    <link rel="icon" type="image/png" href="public/favicon/favicon.png">
-    <link rel="apple-touch-icon" href="public/favicon/favicon.png">
+    <title>Admin - Memeotica</title>
+    <link rel="icon" type="image/png" href="Favicon memeotica.png">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Подключение Supabase -->
