--- a/coming.html
+++ b/coming.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Coming Soon</title>
-    <link rel="icon" type="image/png" href="public/favicon/favicon.png">
-    <link rel="apple-touch-icon" href="public/favicon/favicon.png">
+    <title>Coming - Memeotica</title>
+    <link rel="icon" type="image/png" href="Favicon memeotica.png">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/home.css">
@@ -18,7 +17,7 @@
 <body>
     <header class=" sticky top-4 mt-4 z-40">
         <nav>
-            <ul class=" flex items-center gap-5">
+            <ul class=" flex items-center gap-10">
                 <li id="menu" class="flex gap-4 md:hidden">
                     <svg class=" w-5 h-5" width="100%" height="100%" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M2.5 10H17.5M2.5 5H17.5M2.5 15H12.5" stroke="white" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
