--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Memeotica</title>
-    <link rel="icon" type="image/png" href="public/favicon/favicon.png">
-    <link rel="apple-touch-icon" href="public/favicon/favicon.png">
+    <link rel="icon" type="image/png" href="Favicon memeotica.png">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/home.css">
@@ -18,7 +17,7 @@
 <body>
     <header class=" sticky top-4 mt-4 z-40">
         <nav>
-            <ul class=" flex items-center gap-5">
+            <ul class=" flex items-center gap-10">
                 <li id="menu" class="flex gap-4 md:hidden">
                     <svg class=" w-5 h-5" width="100%" height="100%" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M2.5 10H17.5M2.5 5H17.5M2.5 15H12.5" stroke="white" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
@@ -134,7 +133,7 @@
     </section>
     <section class=" ">
         <div class=" content grid gap-6 text-center grid-cols-1 md:grid-cols-3">
-            <div class="p-6 pt-4 bg-[#0602131A] rounded-[4rem] shadow-card">
+            <div class="p-6 transition-all hover:-translate-y-5 pt-4 bg-[#0602131A] rounded-[4rem] shadow-card">
                 <div class=" relative">
                     <img src="public/images/home/magic.png" class="w-56 h-56 mx-auto relative z-10" />
                     <img src="public/images/home/magic.png" class="blur-[4rem] absolute left-1/2 top-1/2 -translate-y-1/2 -translate-x-1/2" />
@@ -147,7 +146,7 @@
                     </a>
                 </div>
             </div>
-            <div class="p-6 pt-4  bg-[#0602131A] rounded-[4rem] shadow-card">
+            <div class="p-6 pt-4 transition-all hover:-translate-y-5 bg-[#0602131A] rounded-[4rem] shadow-card">
                 <div class=" relative">
                     <img src="public/images/home/cards.svg" class="w-56 h-56 mx-auto relative z-10" />
                     <img src="public/images/home/cards.svg" class="blur-[4rem] absolute left-1/2 top-1/2 -translate-y-1/2 -translate-x-1/2" />
@@ -160,7 +159,7 @@
                     </a>
                 </div>
             </div>
-            <div class="p-6 pt-4  bg-[#0602131A] rounded-[4rem] shadow-card">
+            <div class="p-6 pt-4 transition-all hover:-translate-y-5 bg-[#0602131A] rounded-[4rem] shadow-card">
                 <div class=" relative">
                     <img src="public/images/home/sword.svg" class="w-56 h-56 mx-auto relative z-10" />
                     <img src="public/images/home/sword.svg" class="blur-[4rem] absolute left-1/2 top-1/2 -translate-y-1/2 -translate-x-1/2" />
@@ -181,33 +180,33 @@
             <p class=" mt-4 md:max-w-[44rem] max-w-[28rem] mx-auto max-md:text-xl text-center">Your predictions give you valuable insights for the memecoins trading. After the end of voting, fight for a share of 1BTC, mint exclusive NFT cards and enter the leaderboard.</p>
             <div class=" relative mt-12 flex max-md:flex-col justify-between">
                 <div class=" relative md:-translate-x-24 after:w-64 after:h-64 md:after:w-80 md:after:h-80 after:absolute after:left-1/2 after:top-[40%] after:-translate-x-1/2 after:-translate-y-1/2 after:rounded-full after:bg-[#6730FF] after:blur-[7rem]">
-                    <img src="public/images/home/trump-card.svg" alt="Mexican Trump Card" class="md:w-[32rem] md:h-[32rem] w-96 h-96 mx-auto relative z-10 object-cover  ">
-                    <img src="public/images/home/line-left.svg" class=" absolute max-md:rotate-90 md:left-[60%] md:h-[32rem] md:top-8 h-96 top-[60%] left-1/2 max-md:-translate-x-1/2" alt="Process lines">
+                    <img src="public/images/home/trump-card.svg" alt="Mexican Trump Card" class="md:w-[32rem] transition-all hover:-translate-y-5 md:h-[32rem] w-96 h-96 mx-auto relative z-10 object-cover  ">
+                    <img src="public/images/home/line-right.svg" class=" mirror-left max-md:!scale-100 max-md:-rotate-90 absolute md:left-[60%] md:h-[32rem] md:top-8 h-96 max-md:top-[60%] max-md:left-1/2 max-md:-translate-x-1/2" alt="Process lines">
                 </div>
 
                 <div class=" max-md:my-40 max-md:text-xl text-center md:space-y-14 max-md:grid grid-cols-2 gap-4">
-                    <div class="flex flex-col justify-center items-center">
+                    <div class="flex transition-all hover:scale-105 flex-col justify-center items-center">
                         <div class=" relative">
                             <img src="public/images/home/success.svg" class="md:w-20 md:h-20 w-32 h-32 relative z-10">
                             <img src="public/images/home/success.svg" class="md:w-20 md:h-20 w-32 h-32 absolute blur-[0.75rem] left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2">
                         </div>
                         <span class="text-[#32D583]">Make successful predictions</span>
                     </div>
-                    <div class="flex flex-col justify-center items-center">
+                    <div class="flex transition-all hover:scale-105 flex-col justify-center items-center">
                         <div class=" relative">
                             <img src="public/images/home/champion.svg" class="md:w-20 md:h-20 w-32 h-32 relative z-10">
                             <img src="public/images/home/champion.svg" class="md:w-20 md:h-20 w-32 h-32 absolute blur-[0.75rem] left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2">
                         </div>
                         <span class="text-[#FDB022]">Enter the leaderboard</span>
                     </div>
-                    <div class="flex flex-col justify-center items-center">
+                    <div class="flex transition-all hover:scale-105 flex-col justify-center items-center">
                         <div class=" relative">
                             <img src="public/images/home/safe.svg" class="md:w-20 md:h-20 w-32 h-32 relative z-10">
                             <img src="public/images/home/safe.svg" class="md:w-20 md:h-20 w-32 h-32 absolute blur-[0.75rem] left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2">
                         </div>
                         <span class="text-[#0BA5EC]">Get the trading insight</span>
                     </div>
-                    <div class="flex flex-col justify-center items-center">
+                    <div class="flex transition-all hover:scale-105 flex-col justify-center items-center">
                         <div class=" relative">
                             <img src="public/images/home/jewelry.svg" class="md:w-20 md:h-20 w-32 h-32 relative z-10">
                             <img src="public/images/home/jewelry.svg" class="md:w-20 md:h-20 w-32 h-32 absolute blur-[0.75rem] left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2">
@@ -217,7 +216,7 @@
                 </div>
 
                 <div class=" relative md:translate-x-24 after:w-64 after:h-64 md:after:w-80 md:after:h-80 after:absolute after:left-1/2 after:top-[40%] after:-translate-x-1/2 after:-translate-y-1/2 after:rounded-full after:bg-[#FCC900] after:blur-[7rem]">
-                    <img src="public/images/home/mexican-trump-card.svg" alt="Mexican Trump Card" class="md:w-[32rem] md:h-[32rem] w-96 h-96 mx-auto relative z-10 object-cover ">
+                    <img src="public/images/home/mexican-trump-card.svg" alt="Mexican Trump Card" class="md:w-[32rem] md:h-[32rem] transition-all hover:-translate-y-5 w-96 h-96 mx-auto relative z-10 object-cover ">
                     <img src="public/images/home/line-right.svg" class=" absolute max-md:rotate-90 md:right-[60%] md:h-[32rem] md:top-8 h-96 max-md:bottom-[60%] max-md:left-1/2 max-md:-translate-x-1/2" alt="Process lines">
                 </div>
             </div>
