--- a/leaderboard.html
+++ b/leaderboard.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Leaderboard</title>
-    <link rel="icon" type="image/png" href="public/favicon/favicon.png">
-    <link rel="apple-touch-icon" href="public/favicon/favicon.png">
+    <title>Макет Frame 6</title>
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/leaderboard.css">
@@ -18,7 +16,7 @@
 <body>
     <header class=" sticky top-4 mt-4 z-40">
         <nav>
-            <ul class=" flex items-center gap-5">
+            <ul class=" flex items-center gap-10">
                 <li id="menu" class="flex gap-4 md:hidden">
                     <svg class=" w-5 h-5" width="100%" height="100%" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M2.5 10H17.5M2.5 5H17.5M2.5 15H12.5" stroke="white" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
@@ -133,7 +131,7 @@
         <div class=" content grid gap-6 text-center grid-cols-1 md:grid-cols-3">
             <div class="px-10 py-6 pt-4  bg-[#0602131A] rounded-[4rem] shadow-card">
                 <div class=" relative">
-                    <img src="public/images/leaderboard/gold.svg" class="w-56 h-56 mx-auto relative z-10" />
+                    <img src="public/images/leaderboard/gold.svg" class="w-56 transition-all hover:-translate-y-5 h-56 mx-auto relative z-10" />
                     <img src="public/images/leaderboard/gold.svg" class="blur-[4rem] absolute left-1/2 top-1/2 -translate-y-1/2 -translate-x-1/2" />
                 </div>
                 <div class=" relative z-10">
@@ -144,7 +142,7 @@
             </div>
             <div class="px-10 py-6 pt-4  bg-[#0602131A] rounded-[4rem] shadow-card">
                 <div class=" relative">
-                    <img src="public/images/leaderboard/silver.svg" class="w-56 h-56 mx-auto relative z-10" />
+                    <img src="public/images/leaderboard/silver.svg" class="w-56 transition-all hover:-translate-y-5 h-56 mx-auto relative z-10" />
                     <img src="public/images/leaderboard/silver.svg" class="blur-[4rem] absolute left-1/2 top-1/2 -translate-y-1/2 -translate-x-1/2" />
                 </div>
                 <div class=" relative z-10">
@@ -155,7 +153,7 @@
             </div>
             <div class="px-10 py-6 pt-4  bg-[#0602131A] rounded-[4rem] shadow-card">
                 <div class=" relative">
-                    <img src="public/images/leaderboard/bronze.svg" class="w-56 h-56 mx-auto relative z-10" />
+                    <img src="public/images/leaderboard/bronze.svg" class="w-56 transition-all hover:-translate-y-5 h-56 mx-auto relative z-10" />
                     <img src="public/images/leaderboard/bronze.svg" class="blur-[4rem] absolute left-1/2 top-1/2 -translate-y-1/2 -translate-x-1/2" />
                 </div>
                 <div class=" relative z-10">
