--- a/vote.html
+++ b/vote.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Voting</title>
-    <link rel="icon" type="image/png" href="public/favicon/favicon.png">
-    <link rel="apple-touch-icon" href="public/favicon/favicon.png">
+    <title>Vote - Memeotica</title>
+    <link rel="icon" type="image/png" href="Favicon memeotica.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Подключение Supabase -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script> -->
@@ -22,7 +21,7 @@
 <body class="">
     <header class=" sticky top-4 mt-4 z-40">
         <nav>
-            <ul class=" flex items-center gap-5">
+            <ul class=" flex items-center gap-10">
                 <li id="menu" class="flex gap-4 md:hidden">
                     <svg class=" w-5 h-5" width="100%" height="100%" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M2.5 10H17.5M2.5 5H17.5M2.5 15H12.5" stroke="white" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
@@ -128,7 +127,7 @@
     <section class=" ">
         <h1 id="title" class=" text-center text-4xl font-light mt-7">Will Greenland join the USA?</h1>
         <div class="flex content flex-col ">
-            <div class="max-md:order-2 flex gap-5 items-center font-semibold mt-5 md:justify-center">
+            <div class="max-md:order-2 flex gap-20 items-center font-semibold mt-16 md:justify-center">
                 <div class=" max-md:w-full max-md:flex flex-col items-end">
                     <p class="w-2/3 left-name text-center mb-2 md:hidden mt-2">LEFT_NAME</p>
                     <button id="no" class=" bg-[#F04438] py-2.5 px-14 disabled:opacity-40 relative max-md:w-2/3 rounded-lg">NO</button>
