Update vote page, replace PNG NFTs with JPEGs

--- a/vote.html
+++ b/vote.html
@@ -194,18 +194,18 @@
             <h2 class=" mt-24 text-4xl relative z-10  font-light text-center mb-8">Collect this NFT cards during event</h2>
             <div class="space-y-12 max-md:flex flex-wrap justify-center gap-6">
                 <div class="flex gap-6 max-md:contents justify-center">
-                    <img src="public/images/vote/NFT4.png" alt="PICKLE JD VANCE" class="nft-card">
-                    <img src="public/images/vote/NFT3.png" alt="MEXICAN TRUMP" class="nft-card">
-                    <img src="public/images/vote/NFT1.png" alt="XIPOOH" class="nft-card">
-                    <img src="public/images/vote/NFT2.png" alt="J.D.VANCE" class="nft-card">
-                    <img src="public/images/vote/NFT5.png" alt="SPACE MUSK" class="nft-card">
+                    <img src="public/images/vote/NFT1.jpeg" alt="TRUMP TERRAFORMER" class="nft-card">
+                    <img src="public/images/vote/NFT2.jpeg" alt="PRESIDENT PUTIN" class="nft-card">
+                    <img src="public/images/vote/NFT3.jpeg" alt="DRILL BABY" class="nft-card">
+                    <img src="public/images/vote/NFT4.jpeg" alt="ARCTIC REAL" class="nft-card">
+                    <img src="public/images/vote/NFT5.jpeg" alt="FROZEN ASSET" class="nft-card">
                 </div>
                 <div class="flex gap-6 max-md:contents justify-center">
-                    <img src="public/images/vote/NFT5.png" alt="SPACE MUSK" class="nft-card">
-                    <img src="public/images/vote/NFT3.png" alt="MEXICAN TRUMP" class="nft-card">
-                    <img src="public/images/vote/NFT4.png" alt="PICKLE JD VANCE" class="nft-card">
-                    <img src="public/images/vote/NFT1.png" alt="XIPOOH" class="nft-card">
-                    <img src="public/images/vote/NFT2.png" alt="J.D.VANCE" class="nft-card max-md:hidden">
+                    <img src="public/images/vote/NFT6.jpeg" alt="GREENLAND" class="nft-card">
+                    <img src="public/images/vote/NFT7.jpeg" alt="SNOWDEN RETURN" class="nft-card">
+                    <img src="public/images/vote/NFT8.jpeg" alt="LOST IN REYKJAVIK" class="nft-card">
+                    <img src="public/images/vote/NFT9.jpeg" alt="THE ICE MAGA" class="nft-card">
+                    <img src="public/images/vote/NFT10.jpeg" alt="COLD WAR" class="nft-card max-md:hidden">
                 </div>
             </div>
             <div class="bg-vote fixed opacity-80  bottom-0 h-[60%] pointer-events-none w-full"></div>
