Fix text wrapping on vote page for long names

--- a/vote.html
+++ b/vote.html
@@ -133,7 +133,7 @@
                     <button id="no" class=" bg-[#F04438] py-2.5 px-14 disabled:opacity-40 relative max-md:w-2/3 rounded-lg">NO</button>
                 </div>
                 <div class=" max-md:w-full">
-                    <p class="w-2/3 right-name text-center mb-2 md:hidden mt-2">RIGHT_NAME</p>
+                    <p class="w-2/3 right-name text-center mb-2 md:hidden mt-2 break-words max-w-xs">RIGHT_NAME</p>
                     <button id="yes" class="bg-[#039855] py-2.5 px-14 disabled:opacity-40 relative max-md:w-2/3 rounded-lg">YES</button>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                     <div class=" bg-[#61E652] top-1/2 -translate-y-1/2  right-0 absolute blur-[10rem] w-72 h-72"></div> 
                     <div class=" relative z-10">
                         <img src="public/images/vote/trump.png" alt="Right Penguin" class="max-md:max-w-[150%] right-image">
-                        <p class=" right-name max-md:hidden mt-2">RIGHT_NAME</p>
+                        <p class=" right-name max-md:hidden mt-2 break-words max-w-xs">RIGHT_NAME</p>
                     </div>
                 </div>
             </div>
